fixed y-overflow carousel

--- a/app/css/general.css
+++ b/app/css/general.css
@@ -50,11 +50,7 @@
     overflow-y: auto;
 }
 /********General CSS*******/
-.carousel.pointer-event{
-    touch-action:none !importaint;
-}
 body{
-    height: 100vh;
     width: 100%;
     margin: 0;
     padding: 0;
